Fix alignment of variables in _variables.scss

--- a/assets/_scss/core/_variables.scss
+++ b/assets/_scss/core/_variables.scss
@@ -33,14 +33,14 @@ $color-main:        #0071bc;
 $color-main-dark:   #00609f;
 
 // Mobile First Breakpoints
-$mobile-up:       481px;
-$tablet-up:       600px;
-$widescreen-up:     1201px;
+$mobile-up:         481px !default;
+$tablet-up:         600px !default;
+$widescreen-up:     1201px !default;
 
 
 // Magic Numbers
-$site-max-width:    960px;
-$site-margins:      40px;
-$article-max-width:   600px;
-$border-radius:     0px;
-$box-shadow:      0 0 2px rgba(#000, .3);
+$site-max-width:    960px !default;
+$site-margins:      40px !default;
+$article-max-width: 600px !default;
+$border-radius:     0px !default;
+$box-shadow:        0 0 2px rgba(#000, .3) !default;
